--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/dounine/google-translate-rest-api#readme",
   "dependencies": {
+    "axios": "^0.17.0",
     "google-translate-api": "^2.3.0",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
-    "koa-router": "^7.2.1"
+    "koa-cors": "0.0.16",
+    "koa-router": "^7.2.1",
+    "request-promise": "^4.2.2"
   }
 }
